--- a/EC2PR5 - Jsfaber/src/mazeFXML.fxml
+++ b/EC2PR5 - Jsfaber/src/mazeFXML.fxml
@@ -3,8 +3,11 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.TilePane?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
     <top>
@@ -17,7 +20,17 @@
         </FlowPane>
     </top>
     <center>
-        <Canvas fx:id="canvas" height="200.0" width="200.0" BorderPane.alignment="CENTER" />
+      <Pane BorderPane.alignment="CENTER">
+         <children>
+              <Canvas fx:id="canvas" height="200.0" layoutX="98.0" layoutY="57.0" width="200.0" />
+            <SplitPane dividerPositions="0.5" layoutX="99.0" layoutY="264.0" prefHeight="25.0" prefWidth="198.0">
+               <items>
+                  <Button mnemonicParsing="false" onAction="#step" prefHeight="25.0" prefWidth="95.0" text="Step" />
+                  <Button mnemonicParsing="false" onAction="#completeStep" prefHeight="25.0" prefWidth="95.0" text="Finish" />
+               </items>
+            </SplitPane>
+         </children>
+      </Pane>
     </center>
    <bottom>
       <FlowPane prefHeight="62.0" prefWidth="600.0" BorderPane.alignment="CENTER">
@@ -28,6 +41,13 @@
       </FlowPane>
    </bottom>
    <left>
-      <Button fx:id="solveButton" mnemonicParsing="false" onAction="#solve" text="Solve Maze" BorderPane.alignment="CENTER" />
+      <Pane BorderPane.alignment="CENTER">
+         <children>
+            <Button fx:id="solveButton" layoutY="14.0" mnemonicParsing="false" onAction="#solve" text="Solve Maze" />
+         </children>
+      </Pane>
    </left>
+   <right>
+      <TilePane BorderPane.alignment="CENTER" />
+   </right>
 </BorderPane>
